[gd_scene load_steps=8 format=3 uid="uid://cl7j2ebhktni0"]

[ext_resource type="Script" path="res://scenes/scene manager/scene_manager.gd" id="1_5aogb"]
[ext_resource type="AudioStream" uid="uid://b6ngimp55rwy" path="res://assets/audio/menu_select.wav" id="2_xu61k"]
[ext_resource type="PackedScene" uid="uid://tfumugscb7qp" path="res://scenes/win/win.tscn" id="3_vrr0x"]

[sub_resource type="Animation" id="Animation_27h5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vtuy0"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6tgp0"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_76aca"]
_data = {
"RESET": SubResource("Animation_27h5y"),
"fade_in": SubResource("Animation_vtuy0"),
"fade_out": SubResource("Animation_6tgp0")
}

[node name="SceneManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5aogb")

[node name="ScreenCenter" type="CanvasLayer" parent="."]

[node name="ScreenFader" type="ColorRect" parent="ScreenCenter"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -199.0
offset_right = 230.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="FadePlayer" type="AnimationPlayer" parent="ScreenCenter/ScreenFader"]
libraries = {
"": SubResource("AnimationLibrary_76aca")
}

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xu61k")
volume_db = -15.007

[node name="Win" parent="." instance=ExtResource("3_vrr0x")]
visible = false
